[package]
name = "furlong"
version = "0.1.0"
authors = ["Reese Walton <jrwalt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = { git="https://github.com/jrwalt4/typenum.git", branch="frac", features = [ "rational" ] }
num-traits = "0.2.15"
approx = "0.5"
